--- a/.gitignore
+++ b/.gitignore
@@ -1,27 +1,27 @@
 venv/
-__pycache__/
-*.pyc
-*.pyo
-*.pyd
-*.pyc
-.Python
-*.log
-*.bak
-*.swp
-*.swo
-*.swn
-*.sqlite
-*.db
-*.retry
-*.pid
-*.csv
-*.tsv
-*.tmp
-*.bak
-*.swp
-*.out
-*.swo
-*.swn
+backend/__pycache__/
+backend/*.pyc
+backend/*.pyo
+backend/*.pyd
+backend/*.pyc
+backend/.Python
+backend/*.log
+backend/*.bak
+backend/*.swp
+backend/*.swo
+backend/*.swn
+backend/*.sqlite
+backend/*.db
+backend/*.retry
+backend/*.pid
+backend/*.csv
+backend/*.tsv
+backend/*.tmp
+backend/*.bak
+backend/*.swp
+backend/*.out
+backend/*.swo
+backend/*.swn
 
 
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
@@ -39,6 +39,7 @@ frontend/build
 
 # misc
 frontend/.DS_Store
+.DS_Store
 frontend/.env.local
 frontend/.env.development.local
 frontend/.env.test.local
