--- a/.gitignore
+++ b/.gitignore
@@ -22,7 +22,7 @@ backend/*.swp
 backend/*.out
 backend/*.swo
 backend/*.swn
-
+backend/controllers/*.pyc
 
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
