Changes needed in Event page

--- a/.gitignore
+++ b/.gitignore
@@ -23,6 +23,7 @@ backend/*.out
 backend/*.swo
 backend/*.swn
 backend/controllers/*.pyc
+backend/controllers/__pycache__/
 
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
